implementation of the output of the message confirming the deletion of the page

--- a/Areas/admin/Views/Pages/Index.cshtml
+++ b/Areas/admin/Views/Pages/Index.cshtml
@@ -14,39 +14,70 @@
 }
 
 <p>
-    @Html.ActionLink("Create New Page", "AddPage", "", new {@class = "btn btn-success"})
+    @Html.ActionLink("Create New Page", "AddPage", "", new { @class = "btn btn-success" })
 </p>
-<table class="table">
-    <tr>
-        <th>
-            Title
-        </th>
-        <th>
-            Slug
-        </th>
-        <th>
-            Sidebar
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Slug)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HasSidebar)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "EditPage", new { id=item.Id }) |
-            @Html.ActionLink("Details", "PageDetails", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "DeletePage", new { id=item.Id })
-        </td>
-    </tr>
+@if (!Model.Any())
+{
+    <h1 class="text-center">There are no pages</h1>
+}
+else
+{
+    <table class="table">
+        <tr>
+            <th>
+                Title
+            </th>
+            <th>
+                Slug
+            </th>
+            <th>
+                Sidebar
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Slug)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HasSidebar)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "EditPage", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "PageDetails", new { id = item.Id })
+                    <!--Если Slug равен home, не показывать кнопку удаления-->
+                    @if (item.Slug != "home")
+                    {
+                        string slash = "| ";
+                        @slash;
+                        @Html.ActionLink("Delete", "DeletePage", new { id = item.Id }, new { @class = "delete" })
+                    }
+
+                </td>
+            </tr>
+        }
+
+    </table>
 }
 
-</table>
+@section Scripts
+{
+    <script>
+        $(function () {
+        /*Confirm page deletion*/
+            
+            $("a.delete").click(function () {
+                if (!confirm("Confirm page deletion")) {
+                    return false;
+                }
+            });
+        });
+    </script>    
+}
