--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,6 +41,10 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+
+    <!--Поключаем "бандл к сайту" -->
+    @Scripts.Render("~/bundles/jqueryui")
+
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
