--- a/Areas/admin/Views/Pages/Index.cshtml
+++ b/Areas/admin/Views/Pages/Index.cshtml
@@ -23,8 +23,8 @@
 }
 else
 {
-    <table class="table">
-        <tr>
+    <table class="table sorting" id="pages">
+        <tr class="home">
             <th>
                 Title
             </th>
@@ -39,8 +39,12 @@ else
 
         @foreach (var item in Model)
         {
-            <tr>
+            <tr id="id_@item.Id" class="@item.Slug">
                 <td>
+                    @if(item.Slug != "home")
+                    {
+                        <span class="ui-icon ui-icon-arrowthick-2-n-s"></span>
+                    }
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
                 <td>
@@ -76,6 +80,21 @@ else
             $("a.delete").click(function () {
                 if (!confirm("Confirm page deletion")) {
                     return false;
+                }
+            });
+
+        /*------------------------------------------*/
+        /* Sorting script */
+
+            $("table#pages tbody").sortable({
+                items: "tr:not(.home)",
+                placeholder: "ui-state-highlight",
+                update: function () {
+                    var ids = $("table#pages tbody").sortable("serialize");
+                    var url = "/Admin/Pages/ReorderPages";
+
+                    $.post(url, ids, function (data) {
+                    });
                 }
             });
         });
