--- a/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/Areas/admin/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            @Html.ActionLink("Dashboard", "Index", "Dashboard", new {@class = "navbar-brand"})
+            @Html.ActionLink("Dashboard", "Index", "Dashboard", new { @class = "navbar-brand" })
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,10 +33,6 @@
                         <a href="/" class="navbar-brand" target="_blank">Shopping Cart</a>
                     </li>
                 </ul>
-
-                @*<span class="navbar-text">
-                    Navbar text with an inline element
-                </span>*@
             </div>
         </div>
     </nav>
@@ -49,6 +45,10 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+
+    <!--Поключаем "бандл" к сайту" -->
+    @Scripts.Render("~/bundles/jqueryui")
+
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
