--- a/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/Areas/admin/Views/Shared/_Layout.cshtml
@@ -10,20 +10,20 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            @Html.ActionLink("Dashboard", "Index", "Dashboard", new { @class = "navbar-brand" })
+            @Html.ActionLink("Dashboard", "Index", "Dashboard", "", new { @class = "navbar-brand" })
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        @Html.ActionLink("Pages", "Index", "Pages", "", new { @class = "nav-link" })    <!--замена ссылки-->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        @Html.ActionLink("Sidebar", "EditSidebar", "Pages", "", new { @class = "nav-link" })     <!--замена ссылки-->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        @*<a class="nav-link" href="#">Pricing</a>*@
                     </li>
                 </ul>
 
@@ -40,7 +40,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - My MVC Store</p>
         </footer>
     </div>
 
